Bug 450943 - Screensharing of fullscreen programs doesn't work under Wayland
Summary: Screensharing of fullscreen programs doesn't work under Wayland
Status: RESOLVED FIXED
Alias: None
Product: kwin
Classification: Plasma
Component: wayland-generic (other bugs)
Version First Reported In: git master
Platform: Other Linux
: NOR normal
Target Milestone: ---
Assignee: KWin default assignee
URL:
Keywords: regression
: 450116 450931 (view as bug list)
Depends on:
Blocks:
 
Reported: 2022-02-28 00:33 UTC by Janet Blackquill
Modified: 2022-03-10 06:14 UTC (History)
5 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 5.24.3
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Janet Blackquill 2022-02-28 00:33:37 UTC
If you attempt to use screensharing functionality on fullscreen programs under Wayland; the fullscreen programs behave as if they didn't exist at all in the capture output.

Seems to be caused by 30464e5c8b3643d19176aa2c521c9dd3eb6609dd.
Comment 1 Bug Janitor Service 2022-02-28 16:30:47 UTC
A possibly relevant merge request was started @ https://invent.kde.org/plasma/kwin/-/merge_requests/2075
Comment 2 Bug Janitor Service 2022-02-28 16:57:06 UTC
A possibly relevant merge request was started @ https://invent.kde.org/plasma/kwin/-/merge_requests/2076
Comment 3 Zamundaaa 2022-02-28 17:00:56 UTC
Git commit 72d9711e5dbecf710666f2121c86a2402c5a9944 by Xaver Hugl.
Committed on 28/02/2022 at 16:27.
Pushed by zamundaaa into branch 'master'.

backends/drm: fix recording with direct scanout

M  +14   -7    src/backends/drm/egl_gbm_layer.cpp

https://invent.kde.org/plasma/kwin/commit/72d9711e5dbecf710666f2121c86a2402c5a9944
Comment 4 Nicolas Fella 2022-02-28 17:02:29 UTC
*** Bug 450931 has been marked as a duplicate of this bug. ***
Comment 5 Zamundaaa 2022-02-28 17:40:23 UTC
Git commit b7a3a0283de6eb3ae816f9f52993c06580809098 by Xaver Hugl.
Committed on 28/02/2022 at 16:55.
Pushed by zamundaaa into branch 'Plasma/5.24'.

backends/drm: fix recording with direct scanout

Backported from 72d9711e5dbecf710666f2121c86a2402c5a9944
FIXED-IN: 5.24.3

M  +14   -7    src/backends/drm/egl_gbm_backend.cpp
M  +1    -0    src/backends/drm/egl_gbm_backend.h

https://invent.kde.org/plasma/kwin/commit/b7a3a0283de6eb3ae816f9f52993c06580809098
Comment 6 p d 2022-03-10 06:14:24 UTC
*** Bug 450116 has been marked as a duplicate of this bug. ***