backends/drm: fix recording with direct scanout

BUG: 450943